--- a/docs/release-notes/v1.31.X.md
+++ b/docs/release-notes/v1.31.X.md
@@ -11,10 +11,30 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.31.1+k3s1](v1.31.X.md#release-v1311k3s1) | Sep 19 2024| [v1.31.1](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v1311) | [v0.12.0](https://github.com/k3s-io/kine/releases/tag/v0.12.0) | [3.44.0](https://sqlite.org/releaselog/3_44_0.html) | [v3.5.13-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.13-k3s1) | [v1.7.21-k3s2](https://github.com/k3s-io/containerd/releases/tag/v1.7.21-k3s2) | [v1.1.14](https://github.com/opencontainers/runc/releases/tag/v1.1.14) | [v0.25.6](https://github.com/flannel-io/flannel/releases/tag/v0.25.6) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.8](https://github.com/traefik/traefik/releases/tag/v2.11.8) | [v1.11.3](https://github.com/coredns/coredns/releases/tag/v1.11.3) | [v0.16.4](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.4) | [v0.0.28](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.28)  |
 | [v1.31.0+k3s1](v1.31.X.md#release-v1310k3s1) | Sep 02 2024| [v1.31.0](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v1310) | [v0.12.0](https://github.com/k3s-io/kine/releases/tag/v0.12.0) | [3.44.0](https://sqlite.org/releaselog/3_44_0.html) | [v3.5.13-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.13-k3s1) | [v1.7.20-k3s1](https://github.com/k3s-io/containerd/releases/tag/v1.7.20-k3s1) | [v1.1.12](https://github.com/opencontainers/runc/releases/tag/v1.1.12) | [v0.25.4](https://github.com/flannel-io/flannel/releases/tag/v0.25.4) | [v0.7.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.0) | [v2.10.7](https://github.com/traefik/traefik/releases/tag/v2.10.7) | [v1.10.1](https://github.com/coredns/coredns/releases/tag/v1.10.1) | [v0.16.3](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.3) | [v0.0.28](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.28)  |
 
 <br />
 
+## Release [v1.31.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.1+k3s1)
+<!-- v1.31.1+k3s1 -->
+
+This release updates Kubernetes to v1.31.1, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#changelog-since-v1310).
+
+### Changes since v1.31.0+k3s1:
+
+* Testing And Secrets-Encryption Backports for 2024-09 [(#10802)](https://github.com/k3s-io/k3s/pull/10802)
+  * Remove secrets encryption controller
+  * Cover edge case when on new minor release for E2E upgrade test
+* Update CNI plugins version [(#10817)](https://github.com/k3s-io/k3s/pull/10817)
+* Backports for 2024-09 [(#10842)](https://github.com/k3s-io/k3s/pull/10842)
+* Fix hosts.toml header var [(#10871)](https://github.com/k3s-io/k3s/pull/10871)
+* Update Kubernetes to v1.31.1 [(#10895)](https://github.com/k3s-io/k3s/pull/10895)
+* Update Kubernetes to v1.31.1-k3s3 [(#10910)](https://github.com/k3s-io/k3s/pull/10910)
+
+-----
 ## Release [v1.31.0+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.0+k3s1)
 <!-- v1.31.0+k3s1 -->
 
