Update release dates
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/blog/2025-03-10-simple-ha.md
+++ b/blog/2025-03-10-simple-ha.md
@@ -53,9 +53,9 @@ backend k3s
     mode tcp
     option tcp-check
     balance roundrobin
-    server server-1 10.10.10.50:6443 check
-    server server-2 10.10.10.51:6443 check
-    server server-3 10.10.10.52:6443 check
+    server server-0 10.10.10.50:6443 check
+    server server-1 10.10.10.51:6443 check
+    server server-2 10.10.10.52:6443 check
 ```
 
 Restart haproxy to apply the config:
@@ -72,6 +72,8 @@ On the first server, install K3s with embedded etcd and a known token:
 curl -sfL https://get.k3s.io | INSTALL_K3S_CHANNEL=v1.31 sh -s - \
 --cluster-init --token k3sblog --tls-san 10.10.10.100
 ```
+
+We pass the `--tls-san` flag adds the load balancer IP as a Subject Alternative Name (SAN) for the certificate.
 
 ### Join the other servers
 
