Standardize nonquoted titles on all pages
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/blog/2025-03-10-simple-ha.md
+++ b/blog/2025-03-10-simple-ha.md
@@ -1,5 +1,5 @@
 ---
-title: "The Basic HA Cluster"
+title: The Basic HA Cluster
 description: Creating the simplest High Availability cluster with LB and upgrading
 authors: dereknola # Fill out your info in the authors.yml file
 hide_table_of_contents: true
