--- a/docs/release-notes/v1.32.X.md
+++ b/docs/release-notes/v1.32.X.md
@@ -1,8 +1,9 @@
 ---
 hide_table_of_contents: true
 sidebar_position: 2
-title: v1.32.X
 ---
+
+# v1.32.X
 
 :::warning Upgrade Notice
 Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent Upgrade Notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#urgent-upgrade-notes).
@@ -10,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.32.6+k3s1](v1.32.X.md#release-v1326k3s1) | Jun 30 2025| [v1.32.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1326) | [v0.13.15](https://github.com/k3s-io/kine/releases/tag/v0.13.15) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s1.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.11](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.11) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.5+k3s1](v1.32.X.md#release-v1325k3s1) | May 23 2025| [v1.32.5](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1325) | [v0.13.15](https://github.com/k3s-io/kine/releases/tag/v0.13.15) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s1.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.26.7](https://github.com/flannel-io/flannel/releases/tag/v0.26.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.10](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.10) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.4+k3s1](v1.32.X.md#release-v1324k3s1) | May 01 2025| [v1.32.4](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1324) | [v0.13.14](https://github.com/k3s-io/kine/releases/tag/v0.13.14) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s2) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.26.7](https://github.com/flannel-io/flannel/releases/tag/v0.26.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.10](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.10) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.3+k3s1](v1.32.X.md#release-v1323k3s1) | Mar 25 2025| [v1.32.3](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1323) | [v0.13.9](https://github.com/k3s-io/kine/releases/tag/v0.13.9) | [3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.19-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.19-k3s1) | [v2.0.4-k3s2](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s2) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.25.7](https://github.com/flannel-io/flannel/releases/tag/v0.25.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.2](https://github.com/traefik/traefik/releases/tag/v3.3.2) | [v1.12.0](https://github.com/coredns/coredns/releases/tag/v1.12.0) | [v0.16.6](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.6) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
@@ -19,6 +21,22 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.32.6+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.32.6+k3s1)
+<!-- v1.32.6+k3s1 -->
+
+This release updates Kubernetes to v1.32.6, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#changelog-since-v1325).
+
+### Changes since v1.32.5+k3s1:
+
+* GHCR image release [(#12463)](https://github.com/k3s-io/k3s/pull/12463)
+* Backports for 2025-06 [(#12497)](https://github.com/k3s-io/k3s/pull/12497)
+* Bump helm-controller [(#12519)](https://github.com/k3s-io/k3s/pull/12519)
+* Update network components [(#12513)](https://github.com/k3s-io/k3s/pull/12513)
+* Update to v1.32.6-k3s1 and Go 1.23.10 [(#12530)](https://github.com/k3s-io/k3s/pull/12530)
+
+-----
 ## Release [v1.32.5+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.32.5+k3s1)
 <!-- v1.32.5+k3s1 -->
 
