--- a/docs/release-notes/v1.33.X.md
+++ b/docs/release-notes/v1.33.X.md
@@ -1,8 +1,9 @@
 ---
 hide_table_of_contents: true
 sidebar_position: 1
-title: v1.33.X
 ---
+
+# v1.33.X
 
 :::warning Upgrade Notice
 Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent Upgrade Notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#urgent-upgrade-notes).
@@ -10,11 +11,28 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.33.2+k3s1](v1.33.X.md#release-v1332k3s1) | Jun 30 2025| [v1.33.2](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1332) | [v0.13.15](https://github.com/k3s-io/kine/releases/tag/v0.13.15) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s1](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s1) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.11](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.11) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.33.1+k3s1](v1.33.X.md#release-v1331k3s1) | May 23 2025| [v1.33.1](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1331) | [v0.13.15](https://github.com/k3s-io/kine/releases/tag/v0.13.15) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s1](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s1) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.26.7](https://github.com/flannel-io/flannel/releases/tag/v0.26.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.10](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.10) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.33.0+k3s1](v1.33.X.md#release-v1330k3s1) | May 08 2025| [v1.33.0](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#v1330) | [v0.13.14](https://github.com/k3s-io/kine/releases/tag/v0.13.14) | [v3.46.1](https://sqlite.org/releaselog/3_46_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.4-k3s4](https://github.com/k3s-io/containerd/releases/tag/v2.0.4-k3s4) | [v1.2.5](https://github.com/opencontainers/runc/releases/tag/v1.2.5) | [v0.26.7](https://github.com/flannel-io/flannel/releases/tag/v0.26.7) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.10](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.10) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 
 <br />
 
+## Release [v1.33.2+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.33.2+k3s1)
+<!-- v1.33.2+k3s1 -->
+
+This release updates Kubernetes to v1.33.2, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.33.md#changelog-since-v1331).
+
+### Changes since v1.33.1+k3s1:
+
+* GHCR image release [(#12462)](https://github.com/k3s-io/k3s/pull/12462)
+* Backports for 2025-06 [(#12492)](https://github.com/k3s-io/k3s/pull/12492)
+* Bump helm-controller [(#12518)](https://github.com/k3s-io/k3s/pull/12518)
+* Update network components [(#12512)](https://github.com/k3s-io/k3s/pull/12512)
+* Update to v1.33.2-k3s1 and Go 1.24.4 [(#12529)](https://github.com/k3s-io/k3s/pull/12529)
+
+-----
 ## Release [v1.33.1+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.33.1+k3s1)
 <!-- v1.33.1+k3s1 -->
 
