Add v1.34 release notes page
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/docs/release-notes/v1.31.X.md
+++ b/docs/release-notes/v1.31.X.md
@@ -1,6 +1,6 @@
 ---
 hide_table_of_contents: true
-sidebar_position: 3
+sidebar_position: 4
 title: v1.31.X
 ---
 
@@ -11,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.31.13+k3s1](v1.31.X.md#release-v13113k3s1) | Sep 22 2025| [v1.31.13](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13113) | [v0.14.0](https://github.com/k3s-io/kine/releases/tag/v0.14.0) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.1.4-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.1.4-k3s1.32) | [v1.2.7](https://github.com/opencontainers/runc/releases/tag/v1.2.7) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.12+k3s1](v1.31.X.md#release-v13112k3s1) | Aug 25 2025| [v1.31.12](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13112) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.11+k3s1](v1.31.X.md#release-v13111k3s1) | Jul 26 2025| [v1.31.11](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13111) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.31.10+k3s1](v1.31.X.md#release-v13110k3s1) | Jun 30 2025| [v1.31.10](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#v13110) | [v0.13.15](https://github.com/k3s-io/kine/releases/tag/v0.13.15) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s1.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v2.11.24](https://github.com/traefik/traefik/releases/tag/v2.11.24) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.11](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.11) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
@@ -27,6 +28,30 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.31.13+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.13+k3s1)
+<!-- v1.31.13+k3s1 -->
+
+This release updates Kubernetes to v1.31.13, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.31.md#changelog-since-v13112).
+
+### Changes since v1.31.12+k3s1:
+
+* Backports for 2025-09 [(#12887)](https://github.com/k3s-io/k3s/pull/12887)
+  * Wire cri-dockerd --log-level=debug up to k3s --debug flag
+  * Fix spegel logging and startup sequence
+  * Update to runc v1.2.7
+  * Do not bootstrap etcd-only nodes from existing supervisor
+  * Add retry on etcd MemberAdd timeout
+  * Bump containerd to v2.1.4
+  * Retry CRD creation in case of conflict
+  * Wire up kine metrics
+  * Fix etcd join timeout handling
+  * Bump k3s-root to v0.15.0
+  * Move data dir into position before creating CNI symlinks
+* Update to v1.31.13-k3s1 and Go 1.23.12 [(#12893)](https://github.com/k3s-io/k3s/pull/12893)
+
+-----
 ## Release [v1.31.12+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.31.12+k3s1)
 <!-- v1.31.12+k3s1 -->
 
@@ -295,7 +320,7 @@ For more details on what's new, see the [Kubernetes release notes](https://githu
 * Bump Trivy version [(#10339)](https://github.com/k3s-io/k3s/pull/10339)
 * Add etcd s3 config secret implementation [(#10340)](https://github.com/k3s-io/k3s/pull/10340)
   * A proxy can now be configured for use when uploading etcd snapshots to a s3-compatible storage service. This overrides any proxy settings passed via environment variables.
-  * Credentials and endpoint configuration for storing etcd snapshots on a s3-compatible storage service can now be read from a Secret, instead of passing them via the CLI or config file. See https://github.com/k3s-io/k3s/blob/main/docs/adrs/etcd-s3-secret.md for more information.
+  * Credentials and endpoint configuration for storing etcd snapshots on a s3-compatible storage service can now be read from a Secret, instead of passing them via the CLI or config file. See https://github.com/k3s-io/k3s/blob/master/docs/adrs/etcd-s3-secret.md for more information.
 * For E2E upgrade test, automatically determine the channel to use [(#10461)](https://github.com/k3s-io/k3s/pull/10461)
 * Bump kine to v0.11.11 [(#10494)](https://github.com/k3s-io/k3s/pull/10494)
 * Fix loadbalancer reentrant rlock [(#10511)](https://github.com/k3s-io/k3s/pull/10511)
