--- a/docs/release-notes/v1.32.X.md
+++ b/docs/release-notes/v1.32.X.md
@@ -1,6 +1,6 @@
 ---
 hide_table_of_contents: true
-sidebar_position: 2
+sidebar_position: 3
 title: v1.32.X
 ---
 
@@ -11,6 +11,7 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 | Version | Release date | Kubernetes | Kine | SQLite | Etcd | Containerd | Runc | Flannel | Metrics-server | Traefik | CoreDNS | Helm-controller | Local-path-provisioner  |
 | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | -----  |
+| [v1.32.9+k3s1](v1.32.X.md#release-v1329k3s1) | Sep 22 2025| [v1.32.9](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1329) | [v0.14.0](https://github.com/k3s-io/kine/releases/tag/v0.14.0) | [3.50.4](https://sqlite.org/releaselog/3_50_4.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.1.4-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.1.4-k3s1.32) | [v1.2.7](https://github.com/opencontainers/runc/releases/tag/v1.2.7) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.8+k3s1](v1.32.X.md#release-v1328k3s1) | Aug 25 2025| [v1.32.8](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1328) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.8.0](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.8.0) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.3](https://github.com/coredns/coredns/releases/tag/v1.12.3) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.7+k3s1](v1.32.X.md#release-v1327k3s1) | Jul 26 2025| [v1.32.7](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1327) | [v0.13.17](https://github.com/k3s-io/kine/releases/tag/v0.13.17) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s2.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s2.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.13](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.13) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
 | [v1.32.6+k3s1](v1.32.X.md#release-v1326k3s1) | Jun 30 2025| [v1.32.6](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#v1326) | [v0.13.15](https://github.com/k3s-io/kine/releases/tag/v0.13.15) | [3.49.1](https://sqlite.org/releaselog/3_49_1.html) | [v3.5.21-k3s1](https://github.com/k3s-io/etcd/releases/tag/v3.5.21-k3s1) | [v2.0.5-k3s1.32](https://github.com/k3s-io/containerd/releases/tag/v2.0.5-k3s1.32) | [v1.2.6](https://github.com/opencontainers/runc/releases/tag/v1.2.6) | [v0.27.0](https://github.com/flannel-io/flannel/releases/tag/v0.27.0) | [v0.7.2](https://github.com/kubernetes-sigs/metrics-server/releases/tag/v0.7.2) | [v3.3.6](https://github.com/traefik/traefik/releases/tag/v3.3.6) | [v1.12.1](https://github.com/coredns/coredns/releases/tag/v1.12.1) | [v0.16.11](https://github.com/k3s-io/helm-controller/releases/tag/v0.16.11) | [v0.0.31](https://github.com/rancher/local-path-provisioner/releases/tag/v0.0.31)  |
@@ -23,6 +24,30 @@ Before upgrading from earlier releases, be sure to read the Kubernetes [Urgent U
 
 <br />
 
+## Release [v1.32.9+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.32.9+k3s1)
+<!-- v1.32.9+k3s1 -->
+
+This release updates Kubernetes to v1.32.9, and fixes a number of issues.
+
+For more details on what's new, see the [Kubernetes release notes](https://github.com/kubernetes/kubernetes/blob/master/CHANGELOG/CHANGELOG-1.32.md#changelog-since-v1328).
+
+### Changes since v1.32.8+k3s1:
+
+* Backports for 2025-09 [(#12886)](https://github.com/k3s-io/k3s/pull/12886)
+  * Wire cri-dockerd --log-level=debug up to k3s --debug flag
+  * Fix spegel logging and startup sequence
+  * Update to runc v1.2.7
+  * Do not bootstrap etcd-only nodes from existing supervisor
+  * Add retry on etcd MemberAdd timeout
+  * Bump containerd to v2.1.4
+  * Retry CRD creation in case of conflict
+  * Wire up kine metrics
+  * Fix etcd join timeout handling
+  * Bump k3s-root to v0.15.0
+  * Move data dir into position before creating CNI symlinks
+* Update to v1.32.9-k3s1 and Go 1.23.12 [(#12894)](https://github.com/k3s-io/k3s/pull/12894)
+
+-----
 ## Release [v1.32.8+k3s1](https://github.com/k3s-io/k3s/releases/tag/v1.32.8+k3s1)
 <!-- v1.32.8+k3s1 -->
 
