typos and fixes
Signed-off-by: galal-hussein <hussein.galal.ahmed.11@gmail.com>

--- a/blog/2025-09-27-k3s-sysbox.md
+++ b/blog/2025-09-27-k3s-sysbox.md
@@ -1,12 +1,12 @@
 ---
-title: Sysbox Runtime With K3S
+title: Sysbox Runtime With K3s
 description: Integrating sysbox runtime with k3s' containerd
 authors: husseingalal
 tags: ["runc","k3s","sysbox"]
 hide_table_of_contents: true
 ---
 
-The K3s binary bundles all the components needed to run a production-ready, CNCF-conformant Kubernetes cluster including containerd, runc, kubelet, and more. In this post we will discuss how containerd communicates with OCI runtimes and will discuss adding another container runtime (Sysbox) to k3s and how it can be used to run system pods in your environment.
+The K3s binary bundles all the components needed to run a production-ready, CNCF-conformant Kubernetes cluster including containerd, runc, kubelet, and more. In this post we will discuss how containerd communicates with OCI runtimes and will discuss adding another container runtime (Sysbox) to K3s and how it can be used to run system pods in your environment.
 
 ## Containerd and Runc
 
@@ -29,11 +29,13 @@ Runc is the component that directly interfaces with the Linux kernel — configu
 
 [Sysbox](https://github.com/nestybox/sysbox) is an open-source, next-generation container runtime created by Nestybox. Unlike traditional runtimes (such as runc), Sysbox is designed to let you run **system containers**. It primarily leverages **Linux user namespaces** and other features to provide containers that behave more like lightweight virtual machines.  
 
-This means you can run workloads like Docker, Systemd, containerd, or even k3s inside your pods — all without requiring privileged mode.
+This means you can run workloads like Docker, Systemd, containerd, or even K3s inside your pods — all without requiring privileged mode.
 
 In short, Sysbox bridges the gap between application containers and virtual machines, enabling use cases like running Kubernetes-in-Kubernetes (K8s-in-K8s), CI/CD pipelines that need full OS-like environments, or development sandboxes with VM-level isolation but container speed.
 
-**Important note**: Currently, Sysbox officially supports **CRI-O** only. CRI-O has native support for Linux user namespaces, which Sysbox relies on. While containerd added user namespace support starting in version v2.0, there was a [bug](https://github.com/nestybox/sysbox/issues/958) in sysbox-runc that prevented it from working properly with Sysbox.
+:::info
+Currently, Sysbox officially supports **CRI-O** only. CRI-O has native support for Linux user namespaces, which Sysbox relies on. While containerd added user namespace support starting in version v2.0, there was a [bug](https://github.com/nestybox/sysbox/issues/958) in sysbox-runc that prevented it from working properly with Sysbox.
+:::
 
 ## Sysbox-runc Containerd Integration
 
@@ -47,7 +49,7 @@ Because of this, containerd instructed sysbox-runc to run containers **without u
 
 # Running Sysbox-runc With K3S
 
-In order to run `sysbox-runc` with k3s you need to have a running k3s cluster, and then you can proceed by installing the latest version of sysbox, However since the fix for containerd support hasn't been yet integrated to sysbox main repo only in `sysbox-runc`, we need to build the binaries from source to get the latest updates.
+In order to run `sysbox-runc` with K3s you need to have a running K3s cluster, and then you can proceed to install the latest version of sysbox, However, since the fix for containerd support hasn't yet been integrated to sysbox main repo only in `sysbox-runc`, we need to build the binaries from source to get the latest updates.
 
 1. Install docker in your system.
 
@@ -123,6 +125,6 @@ Sysbox brings a powerful capability to Kubernetes: the ability to run system-lev
 - Creating secure developer sandboxes that behave like lightweight VMs.  
 - Running system daemons or nested container engines inside pods.  
 
-While Sysbox is officially supported with CRI-O today, the recent fixes in `sysbox-runc` allow it to run on containerd as well — making it possible to integrate with k3s. The integration is still evolving, but it shows how the container ecosystem is moving beyond traditional app containers toward more flexible "system containers." 
+While Sysbox is officially supported with CRI-O today, the recent fixes in `sysbox-runc` allow it to run on containerd as well — making it possible to integrate with K3s. The integration is still evolving, but it shows how the container ecosystem is moving beyond traditional app containers toward more flexible "system containers."
 
-If you’re experimenting with k3s and want to explore system workloads inside pods, Sysbox provides a compelling way to do so while maintaining Kubernetes-native workflows.  
+If you’re experimenting with K3s and want to explore system workloads inside pods, Sysbox provides a compelling way to do so while maintaining Kubernetes-native workflows  
