--- a/blog/2025-09-27-k3s-sysbox.md
+++ b/blog/2025-09-27-k3s-sysbox.md
@@ -27,7 +27,7 @@ Runc is the component that directly interfaces with the Linux kernel — configu
 
 ## Sysbox Runtime
 
-[Sysbox](https://github.com/nestybox/sysbox) is an open-source, next-generation container runtime created by Nestybox. Unlike traditional runtimes (such as runc), Sysbox is designed to let you run **system containers**. It primarily leverages **Linux user namespaces** and other features to provide containers that behave more like lightweight virtual machines.  
+[Sysbox](https://github.com/nestybox/sysbox) is an open-source, next-generation container runtime created by Nestybox. Unlike traditional runtimes (such as runc), Sysbox is designed to let you run "system containers". It primarily leverages **Linux user namespaces** and other features to provide containers that behave more like lightweight virtual machines.
 
 This means you can run workloads like Docker, Systemd, containerd, or even K3s inside your pods — all without requiring privileged mode.
 
@@ -119,9 +119,9 @@ spec:
 
 ## Conclusion
 
-Sysbox brings a powerful capability to Kubernetes: the ability to run system-level workloads inside containers with strong isolation, without requiring privileged mode. When combined with k3s, this opens the door to new use cases such as:
+Sysbox brings a powerful capability to Kubernetes: the ability to run system-level workloads inside containers with strong isolation, without requiring privileged mode. When combined with K3s, this opens the door to new use cases such as:
 
-- Running Kubernetes-in-Kubernetes clusters for virtual clusters (k3k).
+- Running Kubernetes-in-Kubernetes clusters for virtual clusters ([k3k](https://github.com/rancher/k3k)).
 - Creating secure developer sandboxes that behave like lightweight VMs.  
 - Running system daemons or nested container engines inside pods.  
 
