use mermaid diagram instead of a png
Signed-off-by: galal-hussein <hussein.galal.ahmed.11@gmail.com>

--- a/blog/2025-09-27-k3s-sysbox.md
+++ b/blog/2025-09-27-k3s-sysbox.md
@@ -23,7 +23,22 @@ The shim generates the OCI runtime bundle (`config.json` and `rootfs` path) and 
 
 Runc is the component that directly interfaces with the Linux kernel — configuring cgroups, namespaces, seccomp, capabilities, and mounts. After runc finishes creating the container, it **exits**, leaving the shim to manage the lifecycle and I/O of the container.
 
-![containerd runc](containerd.png)
+```mermaid
+graph TD
+    Kubelet["Kubelet<br/>(CRI)"]
+    Containerd["Containerd"]
+    Shim["Shim"]
+    Runtime["OCI Runtime<br/>(runc)"]
+    Container["Container"]
+
+    Kubelet -->|"RunPodSandbox()
+    CreateContainer()"| Containerd
+    Containerd -->|"Start/Stop Task"| Shim
+    Shim -->|"Executes Container"| Runtime
+    Runtime -->|"clone()
+    cgroupns()
+    setns()"| Container
+```
 
 ## Sysbox Runtime
 
