Truncate sysbox blog
Signed-off-by: Derek Nola <derek.nola@suse.com>

--- a/blog/2025-09-27-k3s-sysbox.md
+++ b/blog/2025-09-27-k3s-sysbox.md
@@ -2,11 +2,13 @@
 title: Sysbox Runtime With K3s
 description: Integrating sysbox runtime with k3s' containerd
 authors: husseingalal
-tags: ["runc","k3s","sysbox"]
+tags: ["runc","sysbox"]
 hide_table_of_contents: true
 ---
 
 The K3s binary bundles all the components needed to run a production-ready, CNCF-conformant Kubernetes cluster including containerd, runc, kubelet, and more. In this post we will discuss how containerd communicates with OCI runtimes and will discuss adding another container runtime (Sysbox) to K3s and how it can be used to run system pods in your environment.
+
+<!-- truncate -->
 
 ## Containerd and Runc
 
